--- a/index.html
+++ b/index.html
@@ -3,10 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>William Ruto</title>
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link href="https://fonts.googleapis.com/css?family=Bree+Serif|DM+Serif+Text&display=swap" rel="stylesheet">
+
+		<title>William Ruto</title>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-47727623-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-47727623-1');
+</script>
+
 </head>
 <style>
+	
 @import url('https://fonts.googleapis.com/css?family=Anton|Roboto');
 
 .word {
@@ -178,7 +191,7 @@ footer a {
 }
 </style>
 <body>
-    <h3 class="fixed">WEBSITE UNDER CONSTRUCTION</h3>
+    <h3 class="fixed">WEBSITE UNDER CONSTRUCTION.</h3>
     <div class="word">
         <span>W</span>
         <span>I</span>
